--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
 
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-5">
       <a class="navbar-brand" href="./index.html">Ray-team-Homework</a>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
+      <div class="navbar-collapse">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item ">
+            <a class="nav-link active" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./yuweiwei.html">陳昱偉</a>
@@ -39,15 +39,11 @@
 
   <main role="main">
 
-    <div class="container marketing">
-
-      <hr class="featurette-divider">
+    <div class="container">
 
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
-
-      <div class="row featurette mt-5">
+      <div class="row featurette ">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">陳昱偉</h2>
           <p class="lead">我覺得助教一直很想要我們問問題，可是每次遇到的問題好像google都能解決。</p>
