yuweiwei.html add footer

--- a/yuweiwei.html
+++ b/yuweiwei.html
@@ -104,6 +104,13 @@
     <p>On GitHub, saved changes are called <em>commits</em>. Each commit has an associated <em>commit message</em>, which is a description explaining why a particular change was made. Commit messages capture the history of your changes, so other contributors can understand what you’ve done and why.</p>
   </div>
 
+  <!-- FOOTER -->
+  <hr class="featurette-divider">
+  <footer class="container">
+    <p class="float-right"><a href="#">Back to top</a></p>
+    <p>Ray team &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+  </footer>
+</main>
 
 </main>
 
