fix homepage link

--- a/index.html
+++ b/index.html
@@ -38,32 +38,38 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/yuwei.jpg" alt="陳昱偉">
-                        <div class="card-img-overlay d-flex h-100">
-                            <div class="align-self-center">
-                                <h2>陳昱偉</h2>
-                                <p>我覺得助教一直很想要我們問問題，可是每次遇到的問題好像google都能解決。</p>
+                        <a href="member/yuweiwei.html">
+                            <div class="card-img-overlay d-flex h-100">
+                                <div class="align-self-center">
+                                    <h2>陳昱偉</h2>
+                                    <p>我覺得助教一直很想要我們問問題，可是每次遇到的問題好像google都能解決。</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/caroline.jpg" alt="李若彤">
-                        <div class="card-img-overlay d-flex h-100">
-                            <div class="align-self-center">
-                                <h2>李若彤</h2>
-                                <p>這一次作業原本想試試看pug，可是剛好遇到期中爆炸，沒有時間認真研究 QQ 希望有小組上課或討論時間，感覺偶爾一次也不錯！</p>
+                        <a href="member/caroline.html">
+                            <div class="card-img-overlay d-flex h-100">
+                                <div class="align-self-center">
+                                    <h2>李若彤</h2>
+                                    <p>這一次作業原本想試試看pug，可是剛好遇到期中爆炸，沒有時間認真研究 QQ 希望有小組上課或討論時間，感覺偶爾一次也不錯！</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/member3.jpg" alt="組員">
-                        <div class="card-img-overlay d-flex h-100">
-                            <div class="align-self-center">
-                                <h2>組員</h2>
-                                <p>say something! say something! say something!</p>
+                        <a href="..">
+                            <div class="card-img-overlay d-flex h-100">
+                                <div class="align-self-center">
+                                    <h2>組員</h2>
+                                    <p>say something! say something! say something!</p>
+                                </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
