--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="nav-item"> <a class="nav-link active" href="#">Home<span class="sr-only">(current)</span></a> </li>
                 <li class="nav-item"> <a class="nav-link" href="./member/yuweiwei.html">陳昱偉</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="./member/caroline.html">李若彤</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#">組員</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="./member/yu.html#">方廷宇</a> </li>
             </ul>
         </div>
     </nav>
@@ -35,54 +35,54 @@
         <div class="container">
             <div class="container text-center">
                 <h1 class="display-3 animated bounceInUp section-title">Ray Team Homework</h1> </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/yuwei.jpg" alt="陳昱偉">
-                        <a href="member/yuweiwei.html">
-                            <div class="card-img-overlay d-flex h-100">
-                                <div class="align-self-center">
-                                    <h2>陳昱偉</h2>
-                                    <p>我覺得助教一直很想要我們問問題，可是每次遇到的問題好像google都能解決。</p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/yuwei.jpg" alt="陳昱偉">
+                            <a href="member/yuweiwei.html">
+                                <div class="card-img-overlay d-flex h-100">
+                                    <div class="align-self-center">
+                                        <h2>陳昱偉</h2>
+                                        <p>我覺得助教一直很想要我們問問題，可是每次遇到的問題好像google都能解決。</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/caroline.jpg" alt="李若彤">
-                        <a href="member/caroline.html">
-                            <div class="card-img-overlay d-flex h-100">
-                                <div class="align-self-center">
-                                    <h2>李若彤</h2>
-                                    <p>這一次作業原本想試試看pug，可是剛好遇到期中爆炸，沒有時間認真研究 QQ 希望有小組上課或討論時間，感覺偶爾一次也不錯！</p>
+                    <div class="col-md-4">
+                        <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/caroline.jpg" alt="李若彤">
+                            <a href="member/caroline.html">
+                                <div class="card-img-overlay d-flex h-100">
+                                    <div class="align-self-center">
+                                        <h2>李若彤</h2>
+                                        <p>這一次作業原本想試試看pug，可是剛好遇到期中爆炸，沒有時間認真研究 QQ 希望有小組上課或討論時間，感覺偶爾一次也不錯！</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/member3.jpg" alt="組員">
-                        <a href="..">
-                            <div class="card-img-overlay d-flex h-100">
-                                <div class="align-self-center">
-                                    <h2>組員</h2>
-                                    <p>say something! say something! say something!</p>
+                    <div class="col-md-4">
+                        <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/yu.jpg" alt="方廷宇">
+                            <a href="member/yu.html">
+                                <div class="card-img-overlay d-flex h-100">
+                                    <div class="align-self-center">
+                                        <h2>方廷宇</h2>
+                                        <p>感謝助教解決了提出問題的人 ॑꒳ ॑</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <!-- /.container -->
-    <!-- FOOTER -->
+        </section>
+        <!-- /.container -->
+        <!-- FOOTER -->
     <!--
         <footer class="container">
             <p class="float-right"><a href="#">Back to top</a></p>
             <p>Ray team &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
         </footer>
--->
+    -->
     <footer>
         <div class="container">
             <div class="row">
@@ -95,9 +95,9 @@
     </footer>
 </body>
 <!-- Bootstrap core JavaScript
-      ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script>
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script>
     window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery-slim.min.js"><\/script>')
 </script>
 
