--- a/member/caroline.html
+++ b/member/caroline.html
@@ -25,7 +25,7 @@
                     <li class="nav-item"> <a class="nav-link" href="../index.html">Home</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="./yuweiwei.html">陳昱偉</a> </li>
                     <li class="nav-item"> <a class="nav-link active" href="#">李若彤</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="#">組員</a> </li>
+                    <li class="nav-item"> <a class="nav-link" href="./yu.html">方廷宇</a> </li>
                 </ul>
             </div>
         </nav>
