修正大小寫

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/yu.jpg" alt="方廷宇">
+                        <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/Yu.jpg" alt="方廷宇">
                             <a href="member/yu.html">
                                 <div class="card-img-overlay d-flex h-100">
                                     <div class="align-self-center">
