fix h1 css and img responsive

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="member">
         <div class="container">
             <div class="container text-center">
-                <h1 class="display-3 animated bounceInUp section-title">Ray Team Homework</h1> </div>
+                <h1 class="animated bounceInUp section-title">Ray Team Homework</h1> </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card bg-light text-white"> <img class="card-img img-fluid" src="./public/img/yuwei.jpg" alt="陳昱偉">
