--- a/member/yu.html
+++ b/member/yu.html
@@ -58,6 +58,17 @@
         <p>提交完之後再用git status看一次，你的狀態會變成Changes to be committed</p>
         <li>推送到Github上面</li>
         <code>git push</code>
+        <li>比較文件或commit間修改的差異</li>
+		<code>git log </code>
+		<li>列出該次commit的修改內容</li>
+		<code>git show </code>
+        <li>刪除檔案</li>
+        <code>git rm </code>
+        <li>搬移檔案，這樣就不用add或rm檔案了</li>
+		<code>git mv 檔案名 資料夾</code>
+        <li>git rebase</li>
+		<code>將不同分支上的差異點合併成一個新的commit</code>
+
         <p></p>
         <h3>終端機文件修改常用指令</h3>
         <ol>
@@ -66,32 +77,6 @@
             <li>:q 離開 </li>
             <li> :wq 存檔離開</li>
         </ol>
-
-
-
-
-git log 紀錄檔/git diff 比較
-git log//按q可跳出瀏覽
-
-git rm
-git rm
-將檔案刪除
-
-git mv
-git mv 檔案名 資料夾
-搬移檔案，這樣就不用add或rm檔案了
-
-git rebase
-git rebase
-將不同分支上的差異點合併成一個新的commit
-
-git config
-git config --global
-設定初始參數
-
-git config --list
-可查看設定的參數
-            
             
         </div>
             </section>
